32. Add nodemailer also add otp on client and worker create account

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,13 @@ EMAIL_REDIRECT_URL=http://localhost:5174/auth/callback
 
 DEV_AUTOCONFIRM=false
 FALLBACK_AUTOCONFIRM=false
+
+# ✅ NEW: for OTP mailer (use your Gmail app password or a transactional SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=jdhomeservicesandmaintenance@gmail.com
+SMTP_PASS=dtkudhcrtxaxlnks
+SMTP_FROM=jdhomeservicesandmaintenance@gmail.com
+
+# ✅ NEW: pepper for hashing OTPs
+OTP_SECRET=VietoOW2y3Vel8-MXw1c4FAxflRSiaHadr4ndF-MDYddnmz1gnL22dYKYM_YJW13
