--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.5",
     "npm": "^11.4.2"
   },
   "keywords": [],
