40. Add backend for the client post service request forms (connected to supabase)

--- a/backend/.env
+++ b/backend/.env
@@ -24,3 +24,11 @@ SMTP_PASS=dtkudhcrtxaxlnks
 SMTP_FROM=jdhomeservicesandmaintenance@gmail.com
 
 OTP_SECRET=VietoOW2y3Vel8-MXw1c4FAxflRSiaHadr4ndF-MDYddnmz1gnL22dYKYM_YJW13
+
+# --- Storage buckets (add these) ---
+SUPABASE_BUCKET_CLIENT_PROFILE=client-profile-pics
+SUPABASE_BUCKET_SERVICE_IMAGES=service-request-images
+
+
+VITE_API_BASE_URL=http://localhost:5000
+MAX_BODY_SIZE=25mb
