--- a/backend/.env
+++ b/backend/.env
@@ -27,6 +27,7 @@ OTP_SECRET=VietoOW2y3Vel8-MXw1c4FAxflRSiaHadr4ndF-MDYddnmz1gnL22dYKYM_YJW13
 
 SUPABASE_BUCKET_CLIENT_PROFILE=client-profile-pics
 SUPABASE_BUCKET_SERVICE_IMAGES=service-request-images
+SUPABASE_BUCKET_FILE_LIMIT_BYTES=25mb
 
 VITE_API_BASE_URL=http://localhost:5000
 MAX_BODY_SIZE=25mb
