131. Fix worker signup (i think)

--- a/backend/.env
+++ b/backend/.env
@@ -19,9 +19,9 @@ FALLBACK_AUTOCONFIRM=false
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=jdhomeservicesandmaintenance@gmail.com
-SMTP_PASS=dtkudhcrtxaxlnks
-SMTP_FROM=jdhomeservicesandmaintenance@gmail.com
+SMTP_USER=jdkhomecare@gmail.com
+SMTP_PASS=dhzorjxspxfkzjxs
+SMTP_FROM=jdkhomecare@gmail.com
 
 OTP_SECRET=VietoOW2y3Vel8-MXw1c4FAxflRSiaHadr4ndF-MDYddnmz1gnL22dYKYM_YJW13
 
