175. Still fixing service role key issue

--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,7 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 PUBLIC_APP_URL=
 AUTH_REDIRECT_BASE_URL=
 EMAIL_REDIRECT_URL=
-ALLOWED_ORIGINS=https://jdkhomecare.com,https://*.jdkhomecare.com,http://localhost:*,http://127.0.0.1:*,http://192.168.*.*:*
+ALLOWED_ORIGINS=https://jdkhomecarehomeservice.com,https://*.jdkhomecarehomeservice.com,http://localhost:*,http://127.0.0.1:*,http://192.168.*.*:*
 TRUST_PROXY=true
 COOKIE_SECURE=false
 COOKIE_DOMAIN=
