--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,7 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 PUBLIC_APP_URL=
 AUTH_REDIRECT_BASE_URL=
 EMAIL_REDIRECT_URL=
-ALLOWED_ORIGINS=https://jdkhomecarehomeservice.com,https://*.jdkhomecarehomeservice.com,http://localhost:*,http://127.0.0.1:*,http://192.168.*.*:*
+ALLOWED_ORIGINS=https://jdkhomecareservice.com,https://*.jdkhomecareservice.com,http://localhost:*,http://127.0.0.1:*,http://192.168.*.*:*
 TRUST_PROXY=true
 COOKIE_SECURE=false
 COOKIE_DOMAIN=
@@ -18,9 +18,9 @@ FALLBACK_AUTOCONFIRM=false
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=jdkhomecarehomeservice@gmail.com
-SMTP_PASS=jtwzboupqsnjmmtw
-SMTP_FROM=jdkhomecarehomeservice@gmail.com
+SMTP_USER=jdkhomecareservice@gmail.com
+SMTP_PASS=ylea zsop cgdh mnie
+SMTP_FROM=jdkhomecareservice@gmail.com
 
 OTP_SECRET=VietoOW2y3Vel8-MXw1c4FAxflRSiaHadr4ndF-MDYddnmz1gnL22dYKYM_YJW13
 
